<resources>
    <string name="app_name">Fishing Weather</string>
    <string name="splashText">Loading...</string>
    <string name="connect_warning">Check the internet connection</string>
    <string name="s200">thunderstorm with light rain</string>
    <string name="s201">thunderstorm with rain</string>
    <string name="s202">thunderstorm with heavy rain</string>
    <string name="s210">light thunderstorm</string>
    <string name="s211">thunderstorm</string>
    <string name="s212">heavy thunderstorm</string>
    <string name="s221">ragged thunderstorm</string>
    <string name="s230">thunderstorm with light drizzle</string>
    <string name="s231">thunderstorm with drizzle</string>
    <string name="s232">thunderstorm with heavy drizzle</string>
    <string name="s300">light intensity drizzle</string>
    <string name="s301">drizzle</string>
    <string name="s302">heavy intensity drizzle</string>
    <string name="s310">light intensity drizzle rain</string>
    <string name="s311">drizzle rain</string>
    <string name="s312">heavy intensity drizzle rain</string>
    <string name="s313">shower rain and drizzle</string>
    <string name="s314">heavy shower rain and drizzle</string>
    <string name="s321">shower drizzle</string>
    <string name="s500">light rain</string>
    <string name="s501">moderate rain</string>
    <string name="s502">heavy intensity rain</string>
    <string name="s503">very heavy rain</string>
    <string name="s504">extreme rain</string>
    <string name="s511">freezing rain</string>
    <string name="s520">light intensity shower rain</string>
    <string name="s521">shower rain</string>
    <string name="s522">heavy intensity shower rain</string>
    <string name="s531">ragged shower rain</string>
    <string name="s601">snow</string>
    <string name="s602">heavy snow</string>
    <string name="s611">sleet</string>
    <string name="s612">shower sleet</string>
    <string name="s615">light rain and snow</string>
    <string name="s616">rain and snow</string>
    <string name="s600">light snow</string>
    <string name="s620">light shower snow</string>
    <string name="s621">shower snow</string>
    <string name="s622">heavy shower snow</string>
    <string name="s700">mist</string>
    <string name="s711">smoke</string>
    <string name="s721">haze</string>
    <string name="s731">sand, dust whirls</string>
    <string name="s741">fog</string>
    <string name="s751">sand</string>
    <string name="s761">dust</string>
    <string name="s762">volcanic ash</string>
    <string name="s771">squalls</string>
    <string name="s781">tornado</string>
    <string name="s800">clear sky</string>
    <string name="s801">few clouds</string>
    <string name="s802">scattered clouds</string>
    <string name="s803">broken clouds</string>
    <string name="s804">overcast clouds</string>
    <string name="wind">m/s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog1title">connection</string>
    <string name="dialog1data">Internet connection is required\nto load weather data</string>
    <string name="toolbartext">Main</string>
    <string name="toolbartitleplac">My Locations</string>
    <string name="google_maps_key" translatable="false">AIzaSyCGu3GZlF_W9ddUHHO4tyal_UQPuSVAHpw</string>
    <string name="toolbartitlemap">Map</string>
    <string name="mapdialog">Long click on map\nto get weather conditions for fishing</string>
    <string name="splashtextdone">Done!</string>
    <string name="fishdialogtitle">fishing conditions</string>
    <string name="winddirection">Wind direction</string>
    <string name="windchanges">Wind changes</string>
    <string name="windspeed">Wind speed</string>
    <string name="pressurelevel">Pressure level</string>
    <string name="pressurechanges">Pressure changes</string>
    <string name="tempchanges">Temperature changes</string>
    <string name="weathercond">Weather condition</string>
    <string name="addtomy">add to</string>
    <string name="Empty">Empty</string>
    <string name="editname">Edit name</string>
    <string name="myplacedialogtext">Too add your places, use\n\"add to My\" button from Main screen</string>
    <string name="moon">Moon</string>

</resources>
