<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#448aff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:layout_marginRight="15dp"
            android:src="@drawable/ic_fish_f"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/fishdialogtitle"
            android:id="@+id/textfishtitle" />


    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2962ff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/moon"
            android:text="Moon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffe100"
            android:id="@+id/moon_score"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winddirection"
            android:id="@+id/wind_side"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/moon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffe100"
            android:id="@+id/wind_side_score"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/moon_score"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windchanges"
            android:id="@+id/wind_change"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/wind_side" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffe100"
            android:id="@+id/wind_change_score"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/wind_side_score"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windspeed"
            android:id="@+id/wind_speed"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/wind_change" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffe100"
            android:id="@+id/wind_speed_score"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/wind_change_score"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressurelevel"
            android:id="@+id/pressure"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/wind_speed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffe100"
            android:id="@+id/pressure_score"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/wind_speed_score"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressurechanges"
            android:id="@+id/pressure_changes"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pressure" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffe100"
            android:id="@+id/pressure_changes_score"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/pressure_score"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempchanges"
            android:id="@+id/temp_changes"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pressure_changes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffe100"
            android:id="@+id/temp_changes_score"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/pressure_changes_score"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weathercond"
            android:id="@+id/weather_cond"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/temp_changes" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffe100"
            android:id="@+id/weather_cond_score"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/temp_changes_score"/>

    </RelativeLayout>
</LinearLayout>